Backport the mod to 1.20.4